Portal drag and drop Added UTI, MBoxProxy

--- a/MailBoxes-Info.plist
+++ b/MailBoxes-Info.plist
@@ -28,5 +28,18 @@
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>UTExportedTypeDeclarations</key>
+	<array>
+		<dict>
+			<key>UTTypeDescription</key>
+			<string>Mail box</string>
+			<key>UTTypeIconFile</key>
+			<string>mbox</string>
+			<key>UTTypeIdentifier</key>
+			<string>com.moedae.mailboxes.mbox</string>
+			<key>UTTypeTagSpecification</key>
+			<dict/>
+		</dict>
+	</array>
 </dict>
 </plist>
