Working Drag and Drop from Sidebar to Portlet for MailBox. Factored out MBPortalsCollectionViewController to be same as MBSidebarViewController. Added UTI for Portal drag and drop pasteboard

--- a/MailBoxes-Info.plist
+++ b/MailBoxes-Info.plist
@@ -40,6 +40,14 @@
 			<key>UTTypeTagSpecification</key>
 			<dict/>
 		</dict>
+		<dict>
+			<key>UTTypeDescription</key>
+			<string>Mail Portal</string>
+			<key>UTTypeIdentifier</key>
+			<string>com.moedae.mailboxes.viewportal</string>
+			<key>UTTypeTagSpecification</key>
+			<dict/>
+		</dict>
 	</array>
 </dict>
 </plist>
