Xcode git seems to be broken. Importing mass of changes via source tree.

--- a/MailBoxes-Info.plist
+++ b/MailBoxes-Info.plist
@@ -43,6 +43,8 @@
 		<dict>
 			<key>UTTypeDescription</key>
 			<string>Mail Portal</string>
+			<key>UTTypeIconFile</key>
+			<string>PortalDragOutline</string>
 			<key>UTTypeIdentifier</key>
 			<string>com.moedae.mailboxes.viewportal</string>
 			<key>UTTypeTagSpecification</key>
